# LoopLM

./: .gitignore  Claude.md  README.md  Results.md  guide.md  jobstatus.sh  plan.md  pyproject.toml
paper/: capo_mano.md  hrm.md  looplm.md  moe.md
scripts/: analyze.py  arith_detach_sweep.slurm  arith_exit_gate.slurm  arith_extrap.slurm  arith_find_baseline.slurm  arith_loop_sweep.slurm  arith_loop_sweep_s2.slurm  arith_sweep.slurm  arith_t16.slurm  capo.slurm  download_artifacts.sh  eval_checkpoints.py  evaluate.py  finetune_gate.py  hrm_ablations.slurm  mano.slurm  mano_6x2_80k.slurm  mano_6x2_lr_search.slurm  mano_debug_online.slurm  mano_debug_ops3.slurm  mano_small.slurm  pretokenize_smollm.py  pretrain_1_4b.slurm  train.py  train.slurm
src/analysis/: arithmetic.py  capo.py  cities_100.txt  employers_263.txt  firstnames_1000.txt  gen_name.py  majors_300.txt  mano.py  surnames_1000.txt  universities_200.txt
src/inference/: early_exit.py  kv_cache.py  lm_eval_wrapper.py
src/model/: config.py  looplm.py  moe_layer.py  rope.py  transformer.py
src/training/: adam_atan2.py  data.py  objectives.py  trainer.py
tests/: test_capo.py  test_gate_finetune.py  test_gate_loss.py  test_inference.py  test_kv_cache.py  test_looplm.py  test_mano.py  test_model.py  test_multi_stage.py  test_objectives.py  test_rope.py  test_train_script.py  test_trainer.py  test_transformer.py
