[project]
name = "looplm"
version = "0.1.0"
requires-python = "3.10"
dependencies = [
    "torch>=2.0",
    "transformers",
    "datasets",
    "wandb",
    "pyyaml",
    "lm-eval",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
